<resources>
    <string name="app_name">WoundCamRTC</string>
    <string name="mjview_name">即時熱感影像</string>
    <string name="grabcut_name">影像</string>
    <string name="patientList">病患列表</string>
    <string name="doctor_note">醫生傳訊通知</string>
    <string name="goback">恢復</string>
    <string name="no_authority_to_use">很抱歉!目前無權限使用</string>
    <string name="no_account_authority_to_use">很抱歉!您的帳號有問題(例:密碼修改,權限變更)，請重新登入後才可使用此功能!</string>
    <string name="confirm_network">請確認網路連線是否正常 或 採用離線模式登入</string>
    <string name="login_failed">帳號或密碼輸入錯誤，請再次重試!</string>
    <string name="update_success">修改密碼成功，請重新登入!</string>
    <string name="api_failed">後端出現錯誤!請連絡相關人員。</string>
    <string name="logInfo_not_filled">帳號或密碼未填寫完畢,無法登入!</string>
    <string name="login_timeout">登入時效已超過，請重新登入!</string>
    <string name="camera_failed">相機參數需重新調整!</string>
    <string name="local_data_error">本地端資料異常，請連絡相關人員。</string>
    <string name="info_update_not_filled">帳號或密碼未填寫完畢</string>
    <string name="newpwd_not_match_checkpwd">新密碼輸入不一致,請重試!</string>
    <string name="confirm_permission">請確認相關使用權限是否已開啟</string>
    <string name="version_no"> 版本號: </string>
    <string name="userName">使用者帳號</string>
    <string name="userName_tip">輸入使用者帳號</string>
    <string name="password">使用者密碼</string>
    <string name="pass_tip">輸入密碼</string>
    <string name="oldPass_tip">輸入舊密碼</string>
    <string name="newPass_tip">輸入新密碼</string>
    <string name="checkPass_tip">確認新密碼</string>
    <string name="time_setting">登入時效設定</string>
    <string name="eight_hours">8小時</string>
    <string name="one_day">1天</string>
    <string name="three_days">3天</string>
    <string name="login">登入</string>
    <string name="updatePsd">修改密碼</string>
    <string name="oldPsd">使用者舊密碼</string>
    <string name="newPsd">使用者新密碼</string>
    <string name="checkPsd">確認新密碼</string>
    <string name="confirm_updatePsd">確認修改</string>
    <string name="back_to_login">取消修改</string>
    <string name="copyright">版權所有©2020 工業技術研究院 服務科技中心</string>
    <string name="qryInfo_failed">病患資料查詢失敗!原因如下:(1)病歷號/身份證輸入錯誤 (2)該病患不屬於其照護名單</string>
    <string name="analysis_id_format">請輸入身份證/病歷號</string>
    <string name="analysis_bodypart_format">傷口部位</string>
    <string name="basic_info">基本資料 (Patient Information)</string>
    <string name="case_title_id">病歷號/身分證</string>
    <string name="case_title_name">姓名/性別/年齡</string>
    <string name="case_title_history">過去疾病史</string>
    <string name="case_title_note">重點事項</string>
    <string name="wound_location">傷口位置 (Bodypart)</string>
    <string name="wound_record">傷口紀錄 (Records)</string>
    <string name="no_wound_data">目前無傷口部位</string>
    <string name="no_record">請先點選任一傷口部位</string>
    <string name="wound_analysis_result">傷口尺寸與組織分析數據</string>
    <string name="case_height">長度:</string>
    <string name="case_width">寬度:</string>
    <string name="case_depth">深度:</string>
    <string name="case_area">面積:</string>
    <string name="case_epithelium">上皮:</string>
    <string name="case_granular">肉芽:</string>
    <string name="case_slough">腐肉:</string>
    <string name="case_eschar">壞死:</string>
    <string name="default_cm">0.0 cm</string>
    <string name="default_cm2">0.0 cm<sup>2</sup></string>
    <string name="default_prop">0 %</string>
    <string name="cm">　cm</string>
    <string name="cm2">　cm<sup>2</sup></string>
    <string name="prop">　%</string>
    <string name="user">使用者</string>
    <string name="setting">設定</string>
    <string name="case_mgnt">雲端查詢</string>
    <string name="call">呼叫</string>
    <string name="list">本機紀錄</string>
    <string name="light">補光</string>
    <string name="detect">偵測</string>
    <string name="cam">視訊</string>
    <string name="upload">上傳</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="bright">光線明亮</string>
    <string name="dark">光線昏暗</string>
    <string name="bad_distance">距離不良</string>
    <string name="far">距離太遠</string>
    <string name="near">距離太近</string>
    <string name="stay">暫不登出</string>
    <string name="go_to_login">登出</string>
    <string name="logout_and_close_app">登出並關閉程式</string>
    <string name="ok">確認</string>
    <string name="cancel">取消</string>
    <string name="leave">離開</string>
    <string name="reset">取消儲存</string>
    <string name="stop">停止</string>
    <string name="alert_title">注意</string>
    <string name="anaylsis_title">數據儲存</string>
    <string name="confirm_title">確認</string>
    <string name="remind_title">提醒通知</string>
    <string name="alert_error">發生錯誤</string>
    <string name="no_internet">離線模式</string>
    <string name="bad_localdb">錯誤的本地資料庫</string>
    <string name="recommend">專家建議</string>
    <string name="takePic_error">熱感/3D影像錯誤，無法進行拍照!</string>
    <string name="backto">放棄</string>
    <string name="keep">保留</string>
    <string name="exclude">排除</string>
    <string name="clean">清理</string>
    <string name="undo">復原</string>
    <string name="with">根據</string>
    <string name="interactied">互動</string>
    <string name="ColorAI">顏色分析</string>
    <string name="DnnAI">深度學習</string>
    <string name="default_boundary">螢幕中央</string>
    <string name="togo">AI</string>
    <string name="setref">量測</string>
    <string name="symptom">傷口症狀</string>
    <string name="history">傷口史</string>
    <string name="finish">完成</string>
    <string name="save">儲存</string>
    <string name="marker">參考物</string>
    <string name="size">尺寸</string>
    <string name="height">長</string>
    <string name="width">寬</string>
    <string name="area">面積</string>
    <string name="distance">距離</string>
    <string name="detect_distance">測距</string>
    <string name="centimeter"> 公分</string>
    <string name="wound_scale">長: 0, 寬: 0, 面積: 0, 距離: 0</string>
    <string name="marker_scale">長: 0, 寬: 0, 拍攝距離: 0</string>
    <string name="wound_scale1c">H:</string>
    <string name="wound_scale2c">W:</string>
    <string name="wound_scale3c">A:</string>
    <string name="wound_scale4c">D:</string>
    <string name="wound_scale1v">0</string>
    <string name="wound_scale2v">0</string>
    <string name="wound_scale3v">0</string>
    <string name="wound_scale4v">0</string>
    <string name="scale_info1c">W   :</string>
    <string name="scale_info2c">H   :</string>
    <string name="scale_info3c">Area:</string>
    <string name="scale_info4c">Dist:</string>
    <string name="image_saved">影像已儲存</string>
    <string name="confirm_upload_save_data">請確認是否儲存此數據?</string>
    <string name="picker_cancel">取消</string>
    <string name="picker_set">確認</string>
    <string name="proportion">比重</string>
    <string name="epithelium">上皮</string>
    <string name="granular">肉芽</string>
    <string name="slough">腐肉</string>
    <string name="eschar">壞死</string>
    <string name="wound_proportion">上皮: 0%, 肉芽: 0%, 腐肉: 0%, 壞死: 0%</string>
    <string name="prop_info1c">Epit.:</string>
    <string name="prop_info2c">Gran.:</string>
    <string name="prop_info3c">Slou.:</string>
    <string name="prop_info4c">Esch.:</string>
    <string name="symptom_title">根據以下內容，填寫傷口症狀：</string>
    <string name="history_title">根據以下內容，填寫傷口史：</string>
    <string name="required_note">提醒您，尚有問題未填寫完畢!</string>
    <string name="question_fever">1.是否有發燒? <font color='#FF4081'>*</font></string>
    <string name="question_smell">2.是否有異味? <font color='#FF4081'>*</font></string>
    <string name="question_level">3.滲出液程度為何? <font color='#FF4081'>*</font></string>
    <string name="question_character">4.滲出液性質為何? <font color='#FF4081'>*</font></string>
    <string name="question_overtime">1.是否超過 6 週未癒合? <font color='#FF4081'>*</font></string>
    <string name="quesiton_firstOcurred">2.是否初次發生? <font color='#FF0000'>*</font></string>
    <string name="quesiton_occurredDate">3.發生日期為何?</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="date_tip">請選擇發生日期</string>
    <string name="answer_dry">乾燥</string>
    <string name="answer_few">少量</string>
    <string name="answer_middle">中量</string>
    <string name="answer_large">大量</string>
    <string name="answer_none">無</string>
    <string name="answer_serum">血清(淡黃稀薄)</string>
    <string name="answer_bloodWater">血水(紅色)</string>
    <string name="answer_slurry">漿液(紅色)</string>
    <string name="answer_pus">膿性(濃厚)</string>
    <string name="not_finished">傷口症狀及傷口史尚未填寫完成，無法進行儲存!</string>
    <string name="progressing">處理中‧‧‧</string>
    <string name="progressing_measuring">處理中 - 尺寸量測‧‧‧</string>
    <string name="progressing_ranging">處理中 - 範圍判斷‧‧‧</string>
    <string name="progressing_detecting">處理中 - AI 偵測‧‧‧</string>
    <string name="connect_to_">連線位址 </string>
    <string name="front_body">正面</string>
    <string name="back_body">背面</string>
    <string name="left_body">左側</string>
    <string name="right_body">右側</string>
    <string name="left_side">左</string>
    <string name="right_side">右</string>
    <string name="head">頭部</string>
    <string name="hindbrain">後腦杓</string>
    <string name="left_ear">左耳</string>
    <string name="right_ear">右耳</string>
    <string name="face">臉部</string>
    <string name="neck">頸部</string>
    <string name="shoulder">肩部</string>
    <string name="left_shoulder">左肩</string>
    <string name="right_shoulder">右肩</string>
    <string name="chest">胸部</string>
    <string name="left_chest">左胸</string>
    <string name="right_chest">右胸</string>
    <string name="back">背部</string>
    <string name="left_back">左背部</string>
    <string name="right_back">右背部</string>
    <string name="abdomen">腹部</string>
    <string name="waist">腰部</string>
    <string name="sacrum">尾薦骨</string>
    <string name="hip">臀部</string>
    <string name="left_hip">左臀</string>
    <string name="right_hip">右臀</string>
    <string name="anus">肛門周圍</string>
    <string name="left_groin">左鼠蹊</string>
    <string name="right_groin">右鼠蹊</string>
    <string name="genitals">陰部</string>
    <string name="upper_arm">上臂</string>
    <string name="left_upper_arm">左上臂</string>
    <string name="right_upper_arm">右上臂</string>
    <string name="elbow">手肘</string>
    <string name="left_elbow">左手肘</string>
    <string name="right_elbow">右手肘</string>
    <string name="forearm">前臂</string>
    <string name="left_forearm">左前臂</string>
    <string name="right_forearm">右前臂</string>
    <string name="wrist">手腕</string>
    <string name="hand">手掌</string>
    <string name="left_hand">左手</string>
    <string name="right_hand">右手</string>
    <string name="left_wrist">左手腕</string>
    <string name="right_wrist">右手腕</string>
    <string name="finger">手指</string>
    <string name="thigh">大腿</string>
    <string name="left_thigh">左大腿</string>
    <string name="right_thigh">右大腿</string>
    <string name="knee">膝部</string>
    <string name="left_knee">左膝</string>
    <string name="right_knee">右膝</string>
    <string name="legal">小腿</string>
    <string name="left_legal">左小腿</string>
    <string name="right_legal">右小腿</string>
    <string name="ankle">腳踝</string>
    <string name="left_ankle">左腳踝</string>
    <string name="right_ankle">右腳踝</string>
    <string name="upload_rawfiles">上傳檔案</string>
    <string name="downsample_type">圈選精度</string>
    <string name="jpeg_quality">照片品質</string>
    <string name="video_bitrate">視訊頻寬kbps</string>
    <string name="focus_area">對焦範圍</string>
    <string name="flash_mode">閃光模式</string>
    <string name="focus_mode">對焦模式</string>
    <string name="white_balance">白平衡</string>
    <string name="white_balance_adjust">白平衡微調(R,G,B)</string>
    <string name="exposure_compensation">曝光補償</string>
</resources>